# HorizonScanner

./: .gitignore  README.md  horizon.py  main.py  pyproject.toml  roi_boat_finder.py
config/: example.config.yaml
horizon_scanner/: boat_detector.py  gtk_ui.py  horizon.py
horizon_scanner/modules/: candidate_finder.py  candidate_matcher.py  horizon.py  roi_boat_finder.py
horizon_scanner/ui/: gui_v_1.glade
src/: candidate_finder.py  gtk_ui.py  horizon.py  main.py  roi_boat_finder.py
src/ui/: gui_v_1.glade
