[tool.poetry]
name = "HorizonScanner"
version = "0.1.0"
description = ""
authors = ["Florian Vahl <florian@flova.de>",]
license = "GPL-2"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
opencv-python = "^4.2.0"
imutils = "^0.5.3"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
